tests/compile-fail/integration__integration__timelines__missing.snap
---
source: tests/integration/timelines.rs
expression: stderr
---
error: missing timeline(s) for index 1, 2
  ┌─ <input>:3:8
  │
3 │ script 4 bar { }
  │        ^ defining this timeline requires all lesser indices


